--- a/Arrays/#39.TotalAppealofAString.md
+++ b/Arrays/#39.TotalAppealofAString.md
@@ -34,8 +34,18 @@ long long appealSum(string s) {
     return res;
 }
 ```
-OR
-**By Inspection**
+
+#### By DP Inspection
+
+The **(i+1)** = new characters added = also count of new substrings added.
+Here we are reducing those newly added characters (from prev index) - since it's result is already accumulated - thus we get only the new distinct characters count at repeating characters index.
+
+Eg. At index 4, we are adding **5 new 'b' chars**, but we had counted the 'b' at index 2, and is seen here at `bcab & abcab` substrings. This would get redundant if we count again. So we reduce the new added 'b' chars count => (5 - 2) = 3.
+					
+<img width="800px" src="https://i.imgur.com/Rn4t9F0.png">
+
+P.S. You will understand if you read this similar question illustrated solution: https://leetcode.com/problems/count-unique-characters-of-all-substrings-of-a-given-string/discuss/1376543/Java-oror-O(n)-time-oror-Easy-Explanation
+
 ```cpp
 long long appealSum(string s) {
     long long n = s.size(), res = 0, prevTot = 0;
@@ -53,15 +63,10 @@ long long appealSum(string s) {
 ```
 
 #### Atmost K Trick
+- Maximum count of repeating chars is 1 <= cnt <= 26
+- We thus find how many substrings with `cnt` distinct characters.
 
-The **(i+1)** = new characters added = also count of new substrings added.
-Here we are reducing those newly added characters (from prev index) - since it's result is already accumulated - thus we get only the new distinct characters count at repeating characters index.
-
-Eg. At index 4, we are adding **5 new 'b' chars**, but we had counted the 'b' at index 2, and is seen here at `bcab & abcab` substrings. This would get redundant if we count again. So we reduce the new added 'b' chars count => (5 - 2) = 3.
-					
-<img width="800px" src="https://i.imgur.com/Rn4t9F0.png">
-
-P.S. You will understand if you read this similar question illustrated solution: https://leetcode.com/problems/count-unique-characters-of-all-substrings-of-a-given-string/discuss/1376543/Java-oror-O(n)-time-oror-Easy-Explanation
+<img width="900px" alt="Screenshot 2022-05-05 at 7 05 30 PM" src="https://user-images.githubusercontent.com/27401142/166934765-6b1567f0-9d4c-4214-944d-1346ce8fc3e9.png">
 
 ```cpp
 using ll = long long;
