--- a/DP/#18.LongestPalindromeSubstring.md
+++ b/DP/#18.LongestPalindromeSubstring.md
@@ -45,9 +45,11 @@ string longestPalSubstr(string& s) {
     vector<vector<bool>> dp(n, vector<bool>(n));
     int len = 1, start = 0;
 
+    //true for all len=1
     for (int i = 0; i < n; i++)
         dp[i][i] = true;
 
+    //true for all len=2
     for (int i = 0; i < n - 1; i++) {
         if (s[i] == s[i + 1]) {
             dp[i][i + 1] = true;
@@ -55,7 +57,8 @@ string longestPalSubstr(string& s) {
             len = 2;
         }
     }
-
+    
+    //For all len=3, s[i] = s[j] and also inner elements should be palindrome.
     for (int k = 3; k <= n; k++) {
         for (int i = 0; i <= n - k; i++) {
             int j = i + k - 1;
