Update and rename #10.LargestCommonInString.md to #10.LongestCommonInSubseq.md

--- a/DP/#10.LongestCommonInSubseq.md
+++ b/DP/#10.LongestCommonInSubseq.md
@@ -1,4 +1,4 @@
-# #10. Largest Common in String
+### #10. Largest Common in String (Subsequence)
 
 Given two strings text1 and text2, return the length of their longest common subsequence.
 
@@ -58,7 +58,9 @@ int matchSubstring(string a, string b, int m, int n) {
 	return t[m][n];
 }
 ```
-## Largest Substring
+
+
+### Largest Substring
 
 **CPP**
 ```cpp
@@ -78,7 +80,7 @@ int countCommon(string a, string b, int m, int n) {
 	return best_count;
 }
 ```
-## Print Longest Subtring
+### Printing Longest Subtring
 
 **CPP**
 ```cpp
