--- a/DP/#10.LongestCommonInSubseq.md
+++ b/DP/#10.LongestCommonInSubseq.md
@@ -9,14 +9,14 @@ Output: 3
 
 **CPP - DP (Recursion)**
 ```cpp
-int matchSubstring(string a, string b, int m, int n) {
+int matchSeq(string a, string b, int m, int n) {
 	if (m == 0 || n == 0)
 		return 0;
 
 	if (a[m - 1] == b[n - 1])
-		return 1 + matchSubstring(a, b, m - 1, n - 1);
+		return 1 + matchSeq(a, b, m - 1, n - 1);
 
-	return max(matchSubstring(a, b, m - 1, n), matchSubstring(a, b, m, n - 1));
+	return max(matchSeq(a, b, m - 1, n), matchSeq(a, b, m, n - 1));
 }
 ```
 
@@ -40,7 +40,7 @@ int commonString(string a, string b, int m, int n) {
 
 **CPP - DP (Tabulation)**
 ```cpp
-int matchSubstring(string a, string b, int m, int n) {
+int matchSeq(string a, string b, int m, int n) {
 	int t[m + 1][n + 1];
 
 	for (int i = 0; i < m + 1; i++)
