--- a/DP/Strings-DP/#03.ShortCommSubseq.md
+++ b/DP/Strings-DP/#03.ShortCommSubseq.md
@@ -25,3 +25,50 @@ int shortSubSeq(string& s1, string& s2) {
     return m + n - dp[m][n];
 }
 ```
+
+**Print the conjugated reduced string**
+```cpp
+string shortSubSeq(string& s1, string& s2) {
+    int m = s1.size(), n = s2.size();
+    vector<vector<int>> dp(m + 1, vector<int>(n + 1));
+
+    //finding LCS
+    for (int i = 1; i <= m; i++) {
+        for (int j = 1; j <= n; j++) {
+            if (s1[i - 1] == s2[j - 1])
+                dp[i][j] = 1 + dp[i - 1][j - 1];
+            else
+                dp[i][j] = max(dp[i - 1][j], dp[i][j - 1]);
+        }
+    }
+
+    int i = m, j = n;
+    string res = "";
+    // backtracking the chars
+    while (i >= 1 && j >= 1) {
+        if (s1[i - 1] == s2[j - 1]) {
+            res += s1[i - 1];
+            i--; j--;
+        } else if (dp[i - 1][j] >= dp[i][j - 1]) {
+            res += s2[j - 1];
+            j--;
+        } else {
+            res += s1[i - 1];
+            i--;
+        }
+    }
+
+    //remaining chars
+    while (i >= 1) {
+        res += s1[i - 1];
+        i--;
+    }
+    while (j >= 1) {
+        res += s2[j - 1];
+        j--;
+    }
+
+    reverse(res.begin(), res.end());
+    return res;
+}
+```
