--- a/DP/Strings-DP/#03.ShortCommSubseq.md
+++ b/DP/Strings-DP/#03.ShortCommSubseq.md
@@ -28,43 +28,40 @@ int shortSubSeq(string& s1, string& s2) {
 
 **Print the conjugated reduced string**
 ```cpp
-string shortSubSeq(string& s1, string& s2) {
-    int m = s1.size(), n = s2.size();
-    vector<vector<int>> dp(m + 1, vector<int>(n + 1));
+string shortestCommonSupersequence(string str1, string str2) {
+    int m = str1.size(), n = str2.size();
+    vector<vector<int>> dp(m+1, vector<int>(n+1));
 
-    //finding LCS
-    for (int i = 1; i <= m; i++) {
-        for (int j = 1; j <= n; j++) {
-            if (s1[i - 1] == s2[j - 1])
-                dp[i][j] = 1 + dp[i - 1][j - 1];
+    for(int i=1; i<=m; i++)
+        for(int j=1; j<=n; j++){
+            if(str1[i-1] == str2[j-1]) 
+                dp[i][j] = 1 + dp[i-1][j-1];
             else
-                dp[i][j] = max(dp[i - 1][j], dp[i][j - 1]);
+                dp[i][j] = max(dp[i-1][j], dp[i][j-1]);
         }
-    }
 
-    int i = m, j = n;
     string res = "";
-    // backtracking the chars
-    while (i >= 1 && j >= 1) {
-        if (s1[i - 1] == s2[j - 1]) {
-            res += s1[i - 1];
+    int i=m, j=n;
+    while(i>=1 && j>=1){
+        if(str1[i-1] == str2[j-1]){
+            res += str1[i-1];
             i--; j--;
-        } else if (dp[i - 1][j] >= dp[i][j - 1]) {
-            res += s2[j - 1];
-            j--;
-        } else {
-            res += s1[i - 1];
+        }
+        else if(dp[i-1][j] > dp[i][j-1]){
+            res += str1[i-1];
             i--;
+        }else{
+            res += str2[j-1];
+            j--;
         }
     }
 
-    //remaining chars
-    while (i >= 1) {
-        res += s1[i - 1];
+    while(i >= 1){
+        res += str1[i-1];
         i--;
     }
-    while (j >= 1) {
-        res += s2[j - 1];
+    while(j >= 1){
+        res += str2[j-1];
         j--;
     }
 
