--- a/DP/MatrixChainMultiplication-DP/#01.A(BC).md
+++ b/DP/MatrixChainMultiplication-DP/#01.A(BC).md
@@ -5,6 +5,9 @@
 - A[i-1] * A[i] is the multiplication product
 
 
+GFG Link: https://www.geeksforgeeks.org/matrix-chain-multiplication-dp-8/
+
+
 ```cpp
 int minMultiResult(vector<int>& nums, int i, int j) {
     if (i >= j)
