--- a/DP/MatrixChainMultiplication-DP/#02.PalindromePartioning.md
+++ b/DP/MatrixChainMultiplication-DP/#02.PalindromePartioning.md
@@ -4,6 +4,8 @@ Find the least partition to get all partion as palindromes.
 
 ```
 'a|bab|bbabb|ababa' is the least palindrome partitioning of "ababbbabbababa".
+
+Output: True or False
 ```
 
 **Recursive Code**
@@ -29,4 +31,48 @@ int palindromePartition(string& s, int i, int j) {
 ...
 palindromePartition(s, 0, s.size() - 1);
 ...
+```
+
+**Optimized Code**
+```cpp
+int dp[2000][2000];
+int isPal[2000][2000];
+
+bool isPalindrome(string& s, int i, int j){
+    if(isPal[i][j] != -1) return isPal[i][j];
+
+    while(i <= j){
+        if(s[i] != s[j]) 
+            return false;
+        i++; j--;
+    }
+    return true;
+}
+
+int palindromeCut(string& s, int i, int j){
+    if(i >= j) return 0;
+
+    if(dp[i][j] != -1) return dp[i][j];
+
+    if(isPalindrome(s, i, j))
+        return dp[i][j] = 0;
+
+    int mini = INT_MAX;
+    for(int k=i; k < j; k++){
+        if(isPalindrome(s, i, k)){
+            int temp = 1 + palindromeCut(s, k+1, j);
+            if(temp < mini)
+                mini = temp;
+        }
+    }
+
+    return dp[i][j] = mini;
+}
+
+int minCut(string s) {
+    int n = s.size();
+    memset(isPal, -1, sizeof(isPal));
+    memset(dp, -1, sizeof(dp));
+    return palindromeCut(s, 0, n-1);
+}
 ```
