--- a/DP/MatrixChainMultiplication-DP/#03.ExpEvaluateTrue.md
+++ b/DP/MatrixChainMultiplication-DP/#03.ExpEvaluateTrue.md
@@ -24,8 +24,8 @@ bool solve(string& s, int i, int j, bool reqTrue) {
     //basically loops over symbols - (& | ^)
     for (int k = i + 1; k < j; k += 2) {
         int lt = solve(s, i, k - 1, true);
-        int lf = solve(s, k + 1, j, false);
-        int rt = solve(s, i, k - 1, true);
+        int lf = solve(s, i, k - 1, false);
+        int rt = solve(s, k + 1, j, true);
         int rf = solve(s, k + 1, j, false);
 
         //list all possible combinations
