--- a/DP/MatrixChainMultiplication-DP/#06.BurstBaloons.md
+++ b/DP/MatrixChainMultiplication-DP/#06.BurstBaloons.md
@@ -14,9 +14,9 @@ coins =  3*1*5    +   3*5*8   +  1*3*8  + 1*8*1 = 167
 
 <img width="825" alt="Screenshot 2022-05-21 at 5 46 59 PM" src="https://user-images.githubusercontent.com/27401142/169651164-6453b05e-f434-4c26-a021-bd1e82004edb.png">
 
-- We are "reversely" popping the balloons.
+- We are "reversely" popping the balloons - meaning the very initial `kth` balloon would choose is the one popped last.
 - Suppose we pop balloon `k = 4` at the last, we get value = `nums[i - 1] * nums[k] * nums[j + 1]`.
-- Here `solve(nums, i, k - 1)` -> left and `solve(nums, k + 1, j)` -> right subproblem, "**would have been solved already**".
+- This is because, `solve(nums, i, k - 1)` -> left and `solve(nums, k + 1, j)` -> right subproblem, "**would have been solved already**".
 
 
 **MCM - Memoized**
