--- a/PrefixSum/#02.LongestWellPerformingInterval.md
+++ b/PrefixSum/#02.LongestWellPerformingInterval.md
@@ -6,6 +6,7 @@ Steps:
 - Convert each hour state of 1 or -1; and take prefix sum.
 - We need "more 1s" and "less -1s", which means best interval will have sum > 0
 - To get intermediate intervals, we can take hours[0:i] which is negative and subtract hours[0:j] whose pref sum diff gives sum > 0.
+- Like.. `sum - (sum-1) = 1` which is `> 0`, can be considered in interval.
 
 **C++ Code**
 ```cpp
