--- a/Math/#11.FindPrimesInRange.md
+++ b/Math/#11.FindPrimesInRange.md
@@ -14,6 +14,8 @@ void buildStieve() {
 
   for (int i = 2; i * i <= max_num; i++) {
     if (primes[i] == true) {
+      // For 2x3 = 6, 3x2 = 6, 
+      // we skip 3's initial multiples and start from its square
       for (int j = i * i; j <= max_num; j += i) {
         primes[j] = false;
       }
