--- a/Math/#12.PrimeFactorization.md
+++ b/Math/#12.PrimeFactorization.md
@@ -29,6 +29,10 @@ void primeFactorize(int n) {
     n /= spf[n];
   }
 }
+
+// buildSieve();
+// primeFactorize(12);
+// Output: 2 2 3
 ```
 
 **Naive Method**
