--- a/Math/#11.FindPrimesInRange.md
+++ b/Math/#11.FindPrimesInRange.md
@@ -28,3 +28,69 @@ void buildStieve() {
     cout << "Not Prime.";
 }
 ```
+
+**Sieve Segmented Method**
+```cpp
+int max_num = 1000000000;
+vector <bool> allPrimes;
+
+void buildSieve() {
+  allPrimes.resize(max_num + 1, true);
+
+  allPrimes[0] = false;
+  allPrimes[1] = false;
+
+  for (int i = 2; i * i <= max_num; i++) {
+    if (allPrimes[i] == true) {
+      for (int j = i * i; j <= max_num; j++) {
+        allPrimes[j] = false;
+      }
+    }
+  }
+}
+
+vector <int> generatePrimes(int n) {
+  vector <int> ds;
+  for (int i = 0; i <= n; ++i) {
+    if (allPrimes[i] == true)
+      ds.push_back(i);
+  }
+  return ds;
+}
+
+int main() {
+  //step1: build sieve
+  buildSieve();
+
+  int t;
+  cin >> t;
+  while (t--) {
+    int l, r;
+    cin >> l >> r;
+
+    //step2: get all primes which can multiple in our range
+    auto primes = generatePrimes(sqrt(r));
+
+    //step 3: generate dummy array
+    vector <int> dummy(r - l + 1, 1);
+
+    for (int & pr: primes) {
+      int firstMultiple = (l + pr - 1) / pr;;
+
+      // no need to check first element 110, check from 121 for prime 11
+      for (int j = max(firstMultiple, pr * pr); j <= r; j += pr) {
+        dummy[j - l] = 0;
+      }
+    }
+
+    for (int i = l; i <= r; i++) {
+      if (dummy[i - 1] == 1)
+        cout << i << endl;
+    }
+
+    cout << endl;
+  }
+
+  return 0;
+}
+```
