--- a/Math/#14.LongestBinarySubsequenceLessThanorEqualtoK.md
+++ b/Math/#14.LongestBinarySubsequenceLessThanorEqualtoK.md
@@ -2,6 +2,10 @@
 
 Leetcode link: https://leetcode.com/problems/longest-binary-subsequence-less-than-or-equal-to-k/
 
+- For longest subsequence, We can include as many zeros = whose overall value will always be <= K.
+- To include more in subsequence, We carefully try inserting 1 at its LSB and see if it outruns the K sum.
+- So greedy works great here.
+
 **C++ Code**
 ```cpp
 int longestSubsequence(string s, int k) {
