--- a/Arrays/#02.zero_one_twos.md
+++ b/Arrays/#02.zero_one_twos.md
@@ -11,6 +11,20 @@ Input: [2,0,2,1,1,0,2]
 Output: [0,0,1,1,2,2,2]
 ```
 
+**C++ (Best)**
+```cpp
+void sortColors(vector<int>& nums) {
+    int lo = 0, mid = 0, hi = nums.size()-1;
+    while(mid <= hi){
+        switch(nums[mid]){
+            case 0: swap(nums[lo++], nums[mid++]); break;
+            case 1: mid++; break;
+            case 2: swap(nums[mid], nums[hi--]); break;
+        }
+    }
+}
+```
+
 **Python (Best)**
 ```python
 def sortColors(nums):
@@ -29,30 +43,4 @@ def sortColors(nums):
             mid+=1
 
     return nums
-```
-
-**C++ (Best)**
-```cpp
-vector<int> sortColors(vector<int>& nums) {
-	int low, mid, high;
-	low = mid = 0;
-	high = nums.size() - 1;
-
-	while (mid <= high)
-		switch (nums[mid]) {
-		case 0:
-			swap(nums[mid], nums[low]);
-			mid++;
-			low++;
-			break;
-		case 2:
-			swap(nums[mid], nums[high]);
-			high--;
-			break;
-		case 1:
-			mid++;
-			break;
-		}
-	return nums;
-}
 ```
