--- a/Backtracking/#06.Permutations.md
+++ b/Backtracking/#06.Permutations.md
@@ -7,25 +7,23 @@ Input: ABC
 Output: ABC ACB BAC BCA CBA CAB
 ```
 
+<img width="791" alt="Screenshot 2022-06-21 at 12 05 21 AM" src="https://user-images.githubusercontent.com/27401142/174661009-a8c64595-ac25-4e55-8801-2d6a9aef3602.png">
+
+Steps:
+- At each level, we get new character to swap and add to the level.
+
 **CPP - Backtracking**
 ```cpp
-void permute(string s, int l, int n) {
-	if (l == n)
-		cout << s << " ";
-	else {
-		for (int i = l; i <= n; i++) {
-			swap(s[i], s[l]);
-			permute(s, l + 1, n);
-			swap(s[i], s[l]);
-		}
-	}
-}
+void permute(string s, int level = 0) {
+    if (level == s.size()) {
+        cout << s << endl;
+        return;
+    }
 
-int main() {
-	string s = "ABC";
-	int n = s.length();
-
-	permute(s, 0, n - 1);
-	return 0;
+    for (int i = level; i < s.size(); i++) {
+        swap(s[i], s[level]);
+        permute(s, level + 1);
+        swap(s[i], s[level]);
+    }
 }
 ```
