--- a/Greedy/#03.FurthestBuildingYouCanReach.md
+++ b/Greedy/#03.FurthestBuildingYouCanReach.md
@@ -2,12 +2,9 @@
 
 Leetcode link: https://leetcode.com/problems/furthest-building-you-can-reach/
 
-```
 While moving from building i to building i+1 (0-indexed),
-
-If the current building's height is greater than or equal to the next building's height, you do not need a ladder or bricks.
-If the current building's height is less than the next building's height, you can either use one ladder or (h[i+1] - h[i]) bricks.
-```
+- If the current building's height is greater than or equal to the next building's height, you do not need a ladder or bricks.
+- If the current building's height is less than the next building's height, you can either use one ladder or (h[i+1] - h[i]) bricks.
 
 **C++ Code**
 ```cpp
