--- a/Math/#15.K-ConcatenationMaximumSum.md
+++ b/Math/#15.K-ConcatenationMaximumSum.md
@@ -3,7 +3,7 @@
 Leetcode link: https://leetcode.com/problems/k-concatenation-maximum-sum/
 
 Steps:
-- Case 1: if `sum` is +ve, just answer would be k*sum
+- Case 1: if all nos are +ve, just answer would be k*sum
 - Case 2: if has -ve values, `sum` of array could be either +ve of -ve
 - Case 2.1: if sum is -ve, find kadane of `arr + arr` (two cascaded)
 - Case 2.2: if sum is +ve, find kadane of `arr + arr` and add to `(k-2)*sum` (remaining window continuously taken, so total sum)
