--- a/Tree/#18.PathSumIII.md
+++ b/Tree/#18.PathSumIII.md
@@ -7,7 +7,36 @@
 
 Leetcode link: https://leetcode.com/problems/path-sum-iii/
 
-**Solution**
+**O(N) - Two Sum (Prefix Sum)**
+```cpp
+unordered_map<long, long> mp;
+int pathSum(TreeNode* root, int targetSum) {
+    mp[0] = 1;
+    return helper(root, 0, targetSum);
+}
+
+int helper(TreeNode* root, long sum, int targetSum){
+    if(!root) return 0;
+
+    sum = (long) sum + root->val;
+    int res = mp.count(sum - targetSum) ? mp[sum-targetSum] : 0;
+
+    mp[sum]++;
+    res += helper(root->left, sum, targetSum);
+    res += helper(root->right, sum, targetSum);
+    mp[sum]--;
+
+    return res;
+}
+```
+
+Q. Why `mp[sum]--;`?
+1. First the pathsum is incremented with sum till the current node.
+2. Now it moves to "left subtree", and processes the loop with increment and go on with its new pathsum.. let that go.
+3. But wait, In this current iteration, when the chance comes for "right subtree" iteration, oops, the prefixSum was modified deep down in the left subtree.
+4. We need to revert that, that's why we decrement - as the pathsum need to go back till the current node.
+
+**O(N^2) Solution** 
 ```cpp
 int dfs(TreeNode* root, long sum){
     if(!root) return 0;
