--- a/PrefixSum/#04.PlatesBetweenCandles.md
+++ b/PrefixSum/#04.PlatesBetweenCandles.md
@@ -45,18 +45,16 @@ vector<int> platesBetweenCandles(string s, vector<vector<int>>& queries) {
 **Binary Search** ~O(N + QLogN)
 ```cpp
 vector<int> platesBetweenCandles(string s, vector<vector<int>>& queries) {
-        vector<int> res, candles;
-        for(int i=0; i<s.size(); i++)
-            if(s[i] == '|') candles.push_back(i);
-        
-        for(auto& q: queries){
-            int i = lower_bound(candles.begin(), candles.end(), q[0]) - 
-                            candles.begin();
-            int j = upper_bound(candles.begin(), candles.end(), q[1]) -
-                            candles.begin() - 1;
-            res.push_back(i < j ? (candles[j] - candles[i]) - (j-i) : 0);
-        }
-        
-        return res;
+    vector<int> res, candles;
+    for (int i = 0; i < s.size(); i++)
+        if (s[i] == '|') candles.push_back(i);
+
+    for (auto& q : queries) {
+        int i = lower_bound(candles.begin(), candles.end(), q[0]) - candles.begin();
+        int j = upper_bound(candles.begin(), candles.end(), q[1]) - candles.begin() - 1; //get lower index
+        res.push_back(i < j ? (candles[j] - candles[i]) - (j - i) : 0);
     }
+
+    return res;
+}
 ```
