--- a/PrefixSum/#04.PlatesBetweenCandles.md
+++ b/PrefixSum/#04.PlatesBetweenCandles.md
@@ -1,5 +1,7 @@
 ### #04. Plates Between Candles
 
+Leetcode link: https://leetcode.com/problems/plates-between-candles/
+
 
 - For each query, you need to find the number of plates between candles that are in the substring. 
 - A plate is considered between candles if there is at least one candle to its left and at least one candle to its right in the substring.
@@ -8,6 +10,11 @@
 Input: s = "**|**|***|", queries = [[2,5],[5,9]]
 Output: [2,3]
 ```
+
+Solution:
+- Can be done optimally using prefix sum method
+- Count all candles as prefix sum, and ans is `total elements - candles in between ends`.
+
 
 **Prefix Sum** ~ O(N + Q)
 ```cpp
