--- a/Stack/#03.LargestRectangleinHistogram.md
+++ b/Stack/#03.LargestRectangleinHistogram.md
@@ -9,6 +9,11 @@ Return the area of the largest rectangle in the histogram.
 
 <img src="https://assets.leetcode.com/uploads/2021/01/04/histogram.jpg">
 
+Quick Steps:
+- Find the `left` bar which <= heights[i] ("not included in counting area")
+- Find the `right` bar which is <= height[i] ("not included in counting area")
+- `height[i] * (right-left-1)` will give the area.
+
 **Optimal - Stack**
 ```cpp
 int largestRectangleArea(vector<int>& heights) {
