--- a/PrefixSum/#05.MaximalRectangle.md
+++ b/PrefixSum/#05.MaximalRectangle.md
@@ -54,7 +54,7 @@ int maximalRectangle(vector<vector<char>>& matrix) {
 **Stack - Histogram Technique** ~O(MN)
 ```cpp
 int maxAreaHistogram(vector<int>& histogram){
-    histogram.push_back(0); //sentinal node
+    histogram.push_back(0); //sentinal node to check area again
     int area = 0, n = histogram.size();
     stack<int> st;
 
@@ -69,16 +69,19 @@ int maxAreaHistogram(vector<int>& histogram){
     }
     return area;
 }
+
 int maximalRectangle(vector<vector<char>>& grid) {
     int m = grid.size(), n = grid[0].size(), res = 0;
     vector<int> histogram(n, 0);
     for(int i=0; i<m; i++){
+        //we are stacking up '1's to make histogram
         for(int j=0; j<n; j++){
             if(grid[i][j] == '1')
                 histogram[j] += 1;
             else
                 histogram[j] = 0;
         }
+        //check area each time, cuz you need area even at smaller 1x blocks
         res = max(res, maxAreaHistogram(histogram));
     }
     return res;
