--- a/PrefixSum/#05.MaximalRectangle.md
+++ b/PrefixSum/#05.MaximalRectangle.md
@@ -87,3 +87,23 @@ int maximalRectangle(vector<vector<char>>& grid) {
     return res;
 }
 ```
+
+**Short - On the fly calc** ~O(N^3)
+```cpp
+int maximalRectangle(vector<vector<char>>& grid) {
+    int m = grid.size(), n = grid[0].size(), res = 0;
+    vector<vector<int>> ones(m, vector<int>(n, 0));
+    for(int i=0; i<m; i++){
+        for(int j=0; j<n; j++){
+            if(grid[i][j] == '0') continue;
+            //accumulate prefix ones on left
+            int w = ones[i][j] =  1 + (j > 0 ? ones[i][j-1] : 0);
+            for(int k=i; k>=0; k--){
+                w = min(w, ones[k][j]);
+                res = max(res, w*(i-k+1));
+            }
+        }
+    }
+    return res;
+}
+```
