--- a/BFS/#01.WordLadder.md
+++ b/BFS/#01.WordLadder.md
@@ -16,38 +16,30 @@ Leetcode - https://leetcode.com/problems/word-ladder
 
 **Code**
 ```cpp
-int ladderLength(string bw, string ew, vector<string>& wl) {
-    if (find(wl.begin(), wl.end(), ew) == wl.end())
-        return 0;
-
-    set<string> st (wl.begin(), wl.end());
-    int d = 0;
+int ladderLength(string beginWord, string endWord, vector<string>& wordList) {
+    unordered_set<string> wl(begin(wordList), end(wordList));
     queue<string> q;
-    q.push(bw);
+    q.push(beginWord);
 
-    while (!q.empty()) {
-        d++;
-        int n = q.size();
-        while (n--) {
-            string cur = q.front();
-            q.pop();
-            for (int i = 0; i < cur.size(); i++) {
-                string tmp = cur;
-                for (int c = 'a'; c <= 'z'; c++) {
-                    tmp[i] = c;
-                    if (tmp == cur)
-                        continue;
-                    if (tmp == ew)
-                        return d + 1;
-                    if (st.find(tmp) != st.end()) {
-                        q.push(tmp);
-                        st.erase(tmp);
+    int count = 0;
+    while(!q.empty()){
+        int size = q.size();
+        count++; //bfs depth count++
+        while(size--){
+            string cur = q.front(); q.pop();
+            for(int i=0; i<cur.size(); i++){
+                string temp = cur;
+                for(char ch='a'; ch <= 'z'; ch++){
+                    temp[i] = ch;
+                    if(wl.count(temp) && temp != cur){
+                        if(temp == endWord) return 1+count;
+                        wl.erase(temp);
+                        q.push(temp);
                     }
                 }
             }
         }
     }
-
     return 0;
 }
 ```
