--- a/Arrays/#36.MajorityElement-I-and-II.md
+++ b/Arrays/#36.MajorityElement-I-and-II.md
@@ -56,7 +56,7 @@ Intuition:
 * More than N/3 times can have min 1 or 2 max elements.
 * To optimally find it, we expand the Moore's algo and finally test the counter again for the two findings.
 
-**Normal Method**
+**1. Normal Method**
 ```cpp
 vector<int> majorityElement(vector<int>& nums) {
     int n = nums.size();
@@ -74,7 +74,7 @@ vector<int> majorityElement(vector<int>& nums) {
 }
 ```
 
-**Moore Majority Vote Algorithm (Optimal)**
+**2. Moore Majority Vote Algorithm (Optimal)**
 ```cpp
 vector<int> majorityElement(vector<int>& nums) {
     int num1 = INT_MAX, num2 = INT_MAX; //or null values
