--- a/BinarySearch/#05.PeakElement.md
+++ b/BinarySearch/#05.PeakElement.md
@@ -2,11 +2,16 @@
 
 Leetcode link: https://leetcode.com/problems/find-peak-element/
 
+**Return ANY peak element is the question**
+* Can have 1 or 2 peak elements
+
 ```
 Input: nums = [1,2,3,1]
 Output: 2
 Explanation: 3 is a peak element and your function should return the index number 2.
 ```
+
+> Note, the -1 and Nth indices have -INF elements. That's the only reason multiple answers are possible.
 
 **Code**
 ```cpp
@@ -22,5 +27,39 @@ int findPeakElement(vector<int>& nums) {
             hi = mid;
     }
     return lo;
+}
+```
+
+**Aditya Verma Code**
+```cpp
+int findPeakElement(vector<int>& nums) {
+    int n = nums.size();
+    int lo = 0, hi = n-1;
+
+    if(n == 1) return 0;
+
+    while(lo <= hi){
+        int mid = lo + (hi-lo)/2;
+        // if only one step deep
+        if(mid > 0 && mid < n-1){
+            if(nums[mid] > nums[mid+1] && nums[mid] > nums[mid-1])
+                return mid;
+            else if(nums[mid] < nums[mid+1])
+                lo = mid+1;
+            else
+                hi = mid;
+        }
+        //start edge case
+        else if(mid == 0){
+            if(nums[mid] > nums[mid+1]) return mid;
+            else return mid+1;
+        }
+        //end edge case
+        else if(mid == n-1){
+            if(nums[mid] > nums[mid-1]) return mid;
+            else return mid-1;
+        }
+    }
+    return -1;
 }
 ```
