--- a/Arrays/Intervals/#02.MeetingRooms.md
+++ b/Arrays/Intervals/#02.MeetingRooms.md
@@ -27,7 +27,7 @@ int minMeetingRooms(vector<vector<int>> &A) {
 > Learn this from Alisha - https://www.youtube.com/watch?v=s8oOsWGHIl4
 
 ```cpp
-int Solution::solve(vector<vector<int>> &A) {
+int minMeetingRooms(vector<vector<int>> &A) {
     sort(begin(A), end(A));
     priority_queue<int, vector<int>, greater<int>> pq; //store end time only
     
