--- a/SlidingWindow/#03.CountSubarraysWithFixedBounds.md
+++ b/SlidingWindow/#03.CountSubarraysWithFixedBounds.md
@@ -1,5 +1,7 @@
 ### #03.Count Subarrays With Fixed Bounds
 
+Leetcode link: https://leetcode.com/problems/count-subarrays-with-fixed-bounds/
+
 ```
 Input: nums = [1,3,5,2,7,5], minK = 1, maxK = 5
 Output: 2
@@ -8,7 +10,6 @@ Explanation: The fixed-bound subarrays are [1,3,5] and [1,3,5,2].
 Input: nums = [1,1,1,1], minK = 1, maxK = 1
 Output: 10
 ```
-
 
 **Solution**
 ```cpp
