--- a/SlidingWindow/#05.ShortestSubarraywithSumAtLeastK.md
+++ b/SlidingWindow/#05.ShortestSubarraywithSumAtLeastK.md
@@ -40,3 +40,6 @@ int shortestSubarray(vector<int>& nums, int k) {
     return minLen == INT_MAX ? -1 : minLen;
 }
 ```
+
+
+There is O(N) deque solution - if you can understand good for you - https://leetcode.com/problems/shortest-subarray-with-sum-at-least-k/discuss/143726/C%2B%2BJavaPython-O(N)-Using-Deque
