--- a/Tree/#05.BalancedTree.md
+++ b/Tree/#05.BalancedTree.md
@@ -1,19 +1,50 @@
-## #5. Check if tree is Balanced
+### #1. Check if tree is Balanced
 
+Leetcode link: https://leetcode.com/problems/balanced-binary-tree/
+
+```
+Given a binary tree, determine if it is height-balanced.
+A Tree is said to be balanced if abs(lHeight - rHeight) <= 1
+```
+
+**Solution (Optimal)**
 ```cpp
-int isBalancedTree(Node *root) {
-	if (root == NULL) return 0;
+int findHeights(TreeNode* root){
+    if(!root) return 0;
+    int lHeight = findHeights(root->left);
+    if(lHeight == -1) return -1;
+    
+    int rHeight = findHeights(root->right);
+    if(rHeight == -1) return -1;
+    
+    if(abs(lHeight - rHeight) > 1) return -1;
+    
+    return 1 + max(lHeight, rHeight);
+}
+bool isBalanced(TreeNode* root) {
+    return findHeights(root) != -1;
+}
+```
 
-	int lh = isBalancedTree(root->left);
-	if (lh == -1) return -1;
+**Solution 2**
+```cpp
+unordered_map<TreeNode*, int> heights;
+int findHeights(TreeNode* root){
+    if(!root) return 0;
+    return heights[root] = 
+        1 + max(findHeights(root->left), findHeights(root->right));
+}
 
-	int rh = isBalancedTree(root->right);
-	if (rh == -1) return -1;
+bool checkBalanced(TreeNode* root){
+    if(!root) return true;
+    int lHeight = root->left ? heights[root->left] : 0;
+    int rHeight = root->right ? heights[root->right] : 0;
+    return abs(lHeight - rHeight) <= 1 && checkBalanced(root->left) &&
+        checkBalanced(root->right);
+}
 
-	//balanced condition
-	if (abs(lh - rh) > 1)
-		return -1;
-
-	return max(lh, rh) + 1;
+bool isBalanced(TreeNode* root) {
+    findHeights(root);
+    return checkBalanced(root);
 }
 ```
