--- a/Tree/#11.VerticalOrderTraversal.md
+++ b/Tree/#11.VerticalOrderTraversal.md
@@ -4,30 +4,35 @@ Problem: https://leetcode.com/problems/vertical-order-traversal-of-a-binary-tree
 
 ```cpp
 vector<vector<int>> verticalTraversal(TreeNode* root) {
-    map<int, map<int, multiset<int>>> nodes;
-    queue<pair<TreeNode*, pair<int, int>>> todo;
-    todo.push({root, {0, 0}});
+    map<int, map<int, multiset<int>>> mp;
+    queue<pair<TreeNode*, int>> q;
+    q.push({root, 0});
 
-    while (!todo.empty()) {
-        auto p = todo.front();
-        todo.pop();
-        TreeNode* node = p.first;
-        int x = p.second.first, y = p.second.second;
-        nodes[y][x].insert(node->val);
-        if (node->left)
-            todo.push({node->left, {x + 1, y - 1}});
-        if (node->right)
-            todo.push({node->right, {x + 1, y + 1}});
-    }
+    int depth = 0;
+    while(!q.empty()){
+        int size = q.size();
+        while(size--){
+            TreeNode* cur = q.front().first;
+            int w = q.front().second;
+            q.pop();
 
-    vector<vector<int>> ans;
-    for (auto p : nodes) {
-        vector<int> col;
-        for (auto q : p.second) {
-            col.insert(col.end(), q.second.begin(), q.second.end());
+            mp[w][depth].insert(cur->val);
+
+            if(cur->left) q.push({cur->left, w-1});
+            if(cur->right) q.push({cur->right, w+1});
         }
-        ans.push_back(col);
+        depth++;
     }
-    return ans;
+
+    vector<vector<int>> res;
+    for(auto& m: mp){
+        vector<int> level;
+        for(auto& d: m.second){
+            for(int val: d.second)
+                level.push_back(val);
+        }
+        res.push_back(level);
+    }
+    return res;
 }
 ```
