--- a/LinkedList/#16.MergeKSortedLists.md
+++ b/LinkedList/#16.MergeKSortedLists.md
@@ -1,48 +1,41 @@
 ### #16. MergeKSortedLists
 
+Leetcode link: https://leetcode.com/problems/merge-k-sorted-lists/
+
 ```
 Input: lists = [[1,4,5],[1,3,4],[2,6]]
 Output: [1,1,2,3,4,4,5,6]
-Explanation: The linked-lists are:
-[
-  1->4->5,
-  1->3->4,
-  2->6
-]
-merging them into one sorted list:
+
+Explanation: merging them into one sorted list:
 1->1->2->3->4->4->5->6
 ```
 
+> Also check [Divide & Conquer Method](https://github.com/geekykant/SDE-Placement-Interview/blob/master/Divide-And-Conquer/%2301.MergeKSortedLists.md)
 
+**Solution:**
+- O(NLogK) is optimal solution. N is the total elements count.
 ```cpp
-ListNode* mergeTwoLists(ListNode* l1, ListNode* l2) {
-    if (l1 == NULL) return l2;
-    if (l2 == NULL) return l1;
-
-    if (l1->val <= l2->val) {
-        l1->next = mergeTwoLists(l1->next, l2);
-        return l1;
-    } else {
-        l2->next = mergeTwoLists(l1, l2->next);
-        return l2;
-    }
-}
-
+typedef pair<int, ListNode*> pil;
+...
 ListNode* mergeKLists(vector<ListNode*>& lists) {
-    if (lists.empty()) return NULL;
-    int len = lists.size();
-    while (len > 1) {
-        for (int i = 0; i < len / 2; i++) {
-            lists[i] = mergeTwoLists(lists[i], lists[len - 1 - i]);
-        }
-        len = (len + 1) / 2;
+    priority_queue<pil, vector<pil>, greater<pil>> pq;
+    for(auto& l: lists)
+        if(l != NULL)
+            pq.push({l->val, l}); // {num, listNode}
+
+    ListNode dummy = ListNode(0);
+    ListNode* newHead = &dummy;
+
+    while(!pq.empty()){
+        ListNode* curNode = pq.top().second; pq.pop();
+        if(curNode->next != NULL)
+            pq.push({curNode->next->val, curNode->next});
+
+        newHead->next = curNode;
+        newHead = newHead->next;
     }
-    //(OR -- do it long way)
-    //while(lists.size() > 1){
-    //    lists.push_back(mergeTwoLists(lists[0], lists[1]));
-    //    lists.erase(lists.begin());
-    //    lists.erase(lists.begin());
-    //}
-    return lists.front();
+
+    newHead->next = NULL;
+    return dummy.next;
 }
 ```
