--- a/LinkedList/#02.MiddleElement.md
+++ b/LinkedList/#02.MiddleElement.md
@@ -1,11 +1,27 @@
-# #2. Find middle of LinkedList 
+### #2. Find middle of LinkedList 
 
 ```
 Input: [1,2,3,4,5]
-Output: Node 3 from this list (Serialization: [3,4,5])
-The returned node has value 3.  (The judge's serialization of this node is [3,4,5]).
-Note that we returned a ListNode object ans, such that:
-ans.val = 3, ans.next.val = 4, ans.next.next.val = 5, and ans.next.next.next = NULL.
+Ouput: 3
+
+Input: [1,2,3,4]
+Output: 2
+```
+
+**Solution - C++**
+```cpp
+int middleNode(ListNode* head) {
+    if(!head) return true;
+
+    ListNode* slow, *fast;
+    slow = fast = head;
+    while(fast && fast->next){
+        slow = slow->next;
+        fast = fast->next->next;
+    }
+    
+    return slow->val;
+}
 ```
 
 **Python (Fast & Slow Pointers)**
