--- a/LinkedList/#07.IntersectionLinkedList.md
+++ b/LinkedList/#07.IntersectionLinkedList.md
@@ -1,26 +1,21 @@
-# #7. Intersection of Two Linked Lists
+### #7. Intersection of Two Linked Lists
 
 Write a program to find the node at which the intersection of two singly linked lists begins.
+
 For example, the following two linked lists:
 
-```
-Input: intersectVal = 8, listA = [4,1,8,4,5], listB = [5,6,1,8,4,5], skipA = 2, skipB = 3
-Output: Reference of the node with value = 8
-Input Explanation: The intersected node's value is 8 (note that this must not be 0 if the two lists intersect). From the head of A, it reads as [4,1,8,4,5]. From the head of B, it reads as [5,6,1,8,4,5]. There are 2 nodes before the intersected node in A; There are 3 nodes before the intersected node in B.
-```
+![image](https://user-images.githubusercontent.com/27401142/201523936-ae2f217b-e61c-4325-a6b3-fc0061b806f3.png)
 
-**CPP**
+
+**Solution - CPP**
 ```cpp
-ListNode *getIntersectionNode(ListNode *headA, ListNode *headB) {
-    ListNode *p = headA;
-    ListNode *q = headB;
-
-    while (p != q){
-        p = p ? p->next : headB;
-        q = q ? q->next : headA;
+ListNode *getIntersectionNode(ListNode *l1, ListNode *l2) {
+    ListNode* headA = l1, *headB = l2;
+    while(l1 != l2){
+        l1 = l1 ? l1->next : headA;
+        l2 = l2 ? l2->next : headB;
     }
-
-    return p;
+    return l1;
 }
 ```
 
