--- a/PrefixSum/#05.MaximalRectangle.md
+++ b/PrefixSum/#05.MaximalRectangle.md
@@ -2,6 +2,51 @@
 
 Leetcode link: https://leetcode.com/problems/maximal-rectangle/
 
+```
+Given a rows x cols binary matrix filled with 0's and 1's.
+Find the largest rectangle containing only 1's and return its area.
+```
+
+![image](https://user-images.githubusercontent.com/27401142/201677560-41e45492-292f-426c-a21b-b7f7feff9551.png)
+
+**Stack - Histogram Technique** ~O(MN)
+> Converting to problem - [#03. Largest Rectangle in Histogram](https://github.com/geekykant/SDE-Placement-Interview/blob/master/Stack/%2303.LargestRectangleinHistogram.md)
+```cpp
+int maxAreaHistogram(vector<int>& histogram){
+    histogram.push_back(0); //sentinal node to check area again
+    int area = 0, n = histogram.size();
+    stack<int> st;
+
+    for(int i=0; i<n; i++){
+        while(!st.empty() && histogram[st.top()] >= histogram[i]){
+            int h = histogram[st.top()]; st.pop();
+            int left = st.empty() ? -1 : st.top();
+            int right = i;
+            area = max(area, h*(right-left-1));
+        }
+        st.push(i);
+    }
+    return area;
+}
+
+int maximalRectangle(vector<vector<char>>& grid) {
+    int m = grid.size(), n = grid[0].size(), res = 0;
+    vector<int> histogram(n, 0);
+    for(int i=0; i<m; i++){
+        //we are stacking up '1's to make histogram
+        for(int j=0; j<n; j++){
+            if(grid[i][j] == '1')
+                histogram[j] += 1;
+            else
+                histogram[j] = 0;
+        }
+        //check area each time, cuz you need area even at smaller 1x blocks
+        res = max(res, maxAreaHistogram(histogram));
+    }
+    return res;
+}
+```
+
 **Naive (TLE)** O((MN)^2)
 ```cpp
 int maximalRectangle(vector<vector<char>>& matrix) {
@@ -46,43 +91,6 @@ int maximalRectangle(vector<vector<char>>& matrix) {
                 res = max(res, colLen * (row-i+1));
             }
         }
-    }
-    return res;
-}
-```
-
-**Stack - Histogram Technique** ~O(MN)
-```cpp
-int maxAreaHistogram(vector<int>& histogram){
-    histogram.push_back(0); //sentinal node to check area again
-    int area = 0, n = histogram.size();
-    stack<int> st;
-
-    for(int i=0; i<n; i++){
-        while(!st.empty() && histogram[st.top()] >= histogram[i]){
-            int h = histogram[st.top()]; st.pop();
-            int left = st.empty() ? -1 : st.top();
-            int right = i;
-            area = max(area, h*(right-left-1));
-        }
-        st.push(i);
-    }
-    return area;
-}
-
-int maximalRectangle(vector<vector<char>>& grid) {
-    int m = grid.size(), n = grid[0].size(), res = 0;
-    vector<int> histogram(n, 0);
-    for(int i=0; i<m; i++){
-        //we are stacking up '1's to make histogram
-        for(int j=0; j<n; j++){
-            if(grid[i][j] == '1')
-                histogram[j] += 1;
-            else
-                histogram[j] = 0;
-        }
-        //check area each time, cuz you need area even at smaller 1x blocks
-        res = max(res, maxAreaHistogram(histogram));
     }
     return res;
 }
