--- a/PrefixSum/#05.MaximalRectangle.md
+++ b/PrefixSum/#05.MaximalRectangle.md
@@ -10,7 +10,7 @@ Find the largest rectangle containing only 1's and return its area.
 ![image](https://user-images.githubusercontent.com/27401142/201677560-41e45492-292f-426c-a21b-b7f7feff9551.png)
 
 **Stack - Histogram Technique** ~O(MN)
-> Converting to problem - [#03. Largest Rectangle in Histogram](https://github.com/geekykant/SDE-Placement-Interview/blob/master/Stack/%2303.LargestRectangleinHistogram.md)
+> Converting to problem - [Largest Rectangle in Histogram](https://github.com/geekykant/SDE-Placement-Interview/blob/master/Stack/%2303.LargestRectangleinHistogram.md)
 ```cpp
 int maxAreaHistogram(vector<int>& histogram){
     histogram.push_back(0); //sentinal node to check area again
