--- a/Graph/#02.DetectCycle.md
+++ b/Graph/#02.DetectCycle.md
@@ -14,6 +14,7 @@ bool hasCycle(int start, int prev) {
         if (neighbour != prev && hasCycle(neighbour, start))
             return true;
 
+    seen.erase(start);
     return false;
 }
 ```
