--- a/Graph/#02.DetectCycle.md
+++ b/Graph/#02.DetectCycle.md
@@ -49,6 +49,7 @@ bool hasCycle(int start) {
 ```
 
 **Kahn's Algorithm - BFS**
+> Works only in "Directed graph"
 ```cpp
 void cycleCheck(vector<vector<int>>& graph, int n) {
     vector<int> indegree(n);
