--- a/Bit-Manupulation/#03.CountingBits.md
+++ b/Bit-Manupulation/#03.CountingBits.md
@@ -14,7 +14,16 @@ Problem link: https://practice.geeksforgeeks.org/problems/count-total-set-bits-1
 
 **Method 1: Optimal** ~O(LogN)
 ```cpp
+int countSetBits(int n) {
+    if (n < 2) return n;
+    int x = log2(n);
 
+    int p1 = x * pow(2, x - 1);
+    int p2 = n - pow(2, x) + 1;
+    int val = n - pow(2, x);
+
+    return p1 + p2 + countSetBits(val);
+}
 ```
 
 **Method 2: DP** ~O(N)
