--- a/Graph/#14.FindEventualSafeStates.md
+++ b/Graph/#14.FindEventualSafeStates.md
@@ -51,7 +51,7 @@ bool dfs(vector<vector<int>>& graph, int start){
             return false;
     }
 
-    colors[start] = 2;
+    colors[start] = 2; // set safe station.
     return true;
 }
 
