--- a/Trie/#03.DistinctSubstringsCount.md
+++ b/Trie/#03.DistinctSubstringsCount.md
@@ -5,6 +5,31 @@ Input: abab
 Output: 7  -> {" ", "a", "b", "ab", "aba", "bab", "abab"}
 ```
 
+**Concise Solution**
+```cpp
+struct Trie{
+    Trie* chars[26];
+};
+
+int countDistinctSubstring(string s){
+    int res = 0;
+    Trie* root = new Trie();
+    
+    for(int i=0; i < s.size(); i++){
+        Trie* node = root;    
+        for(int j=i; j < s.size(); j++){
+            char ch = s[j]-'a';
+            if(!node->chars[ch]){
+                res++;
+                node->chars[ch] = new Trie();
+            }
+            node = node->chars[ch];
+        }
+    }
+    return 1 + res;
+}
+```
+
 **C++ Code**
 ```cpp
 struct Node {
